<resources>
<string name="app_name">RGU</string>
<string name="app_prefs">RGU Preferences</string>
<string name="app_map">RGU Map</string>
<string name="app_hub">RGU Hub</string>
<string name="app_log">RGU Log</string>
<string name="app_sta">Station Info</string>
<string name="app_messages">Messages</string>
<string name="app_messages_clear">Clear Messages</string>
<string name="firstrun">You need to configure RGU with your callsign and passcode!</string>
<string name="wrongpasscode">Your passcode does not match your callsign!</string>
<string name="e_toolong_callsign">Your callsign is too long for Packet Radio!</string>
<string name="anon_warning">Without a passcode, your reports will not be propagated!</string>
<string name="mininterval">Minimum update time is 1 minute!</string>
<string name="singlelog">Send Position</string>
<string name="startlog">Start Tracking</string>
<string name="stoplog">Stop Tracking</string>
<string name="empty_logview">You have not yet sent or received any packets.\n\n
	Press the \"Menu\" button to send a single report or to start tracking your position.\n\n
	You can also change the application preferences from the menu.</string>
<string name="sta_lastreport">%s Last Report</string>
<string name="map_track_call">Tracking %s...</string>
<string name="map_track_unknown">Position for %s unknown!</string>
<string name="map_select">Select station</string>
<string name="map_loading">Loading...</string>
<string name="sta_ssids">Station SSIDs</string>
<string name="sta_history">Station History</string>
<string name="sta_map">Map</string>
<string name="sta_extmap">External Map</string>
<string name="sta_aprsfi">aprs.fi</string>
<string name="sta_qrzcom">QRZ.com</string>
<string name="msg_send_new">Send message to...</string>
<string name="msg_message_text">Message text</string>
<string name="msg_empty_list">There are no stored conversations.</string>
<string name="msg_stored_offline">The message will be sent as soon as you start tracking.</string>
<string name="msg_from">Message from %s</string>
<string name="msg_to">Message to %s</string>
<string name="msg_abort">Abort transmission</string>
<string name="msg_restart">Restart transmission</string>
<string name="msg_type_rejected">rejected</string>
<string name="msg_type_aborted">aborted</string>
<string name="aprsservice">RGU Service</string>
<string name="service_once">APRS Service single shot: %1$s, %2$s.</string>
<string name="service_start">APRS Service started: %1$s, %2$s.</string>
<string name="service_stop">APRS Service stopped.</string>
<string name="service_no_location">You need to enable either GPS or Network Location for RGU to work properly!</string>
<string name="service_sm_no_gps">SmartBeaconing™ requires GPS!</string>
<string name="post_error">Error</string>
<string name="post_incmg">received</string>
<string name="post_info"></string>
<string name="post_connecting">Connecting to %1$s:%2$d...</string>
<string name="post_reconnect">Connection lost. Reconnect in %d seconds...</string>
<string name="fr_title">Welcome to RGU!</string>
<string name="fr_text">This software may only be used by licensed amateur radio
	operators!</string>
<string name="fr_text2">You need to enter your callsign to use this software.
	To forward your packets, an APRS-IS passcode is required as well.</string>
<string name="fr_text3">Only needed for APRS over the Internet:</string>
<string name="ad_title">About RGU v%s</string>
<string name="ad_copyright">Copyright © 2009-2021 Georg Lukas (DO1GL)\n
	Modified for RGU
	\n\n
	APRS® is a registered trademark of Bob Bruninga (WB4APR)
</string>
<string name="ad_gpl">This program is free software; you can redistribute it and/or
	modify it under the terms of the GNU General Public License
	as published by the Free Software Foundation; either version 2
	of the License, or (at your option) any later version.
	\n\n
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	\n\n
	You should have received a copy of the GNU General Public License
	along with this program; if not, write to the Free Software
	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
	\n\n
	http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
	</string>
<string name="ad_thanks">Thanks to:</string>
<string name="ad_thanks_0">My YL ♥♥♥</string>
<string name="ad_thanks_1">Michael, DO3BOX: idea</string>
<string name="ad_thanks_2">Dirk, DB5OY: motivation and support</string>
<string name="ad_thanks_3">Bastian, DB1BM: AFSK implementation</string>
<string name="ad_thanks_4">Matti, OH2MQK and John, AB0OO: Java APRS</string>
<string name="ad_thanks_5">Sivan, 4X6IZ: AFSK demodulator, https://github.com/sivantoledo/javAX25</string>
<string name="ad_thanks_6">SmartBeaconing™ by HamHUD Nichetronix, LLC, http://hamhud.net</string>
<string name="ad_trans">\n\nTranslation:</string>
<string name="ad_homepage">Home Page</string>
<string name="map_overlays">Overlays</string>
<string name="map_google">Google: Map</string>
<string name="map_satellite">Google: Satellite</string>
<string name="map_osm">OpenStreetMap.org</string>
<string name="map_offline"> %s (Offline)</string>
<string name="map_objects">APRS Objects</string>
<string name="age">Show last...</string>
<string name="age_30">30 minutes</string>
<string name="age_2h">2 hours</string>
<string name="age_12h">12 hours</string>
<string name="age_1d">1 day</string>
<string name="age_2d">2 days</string>
<string name="about">About</string>
<string name="show_hub">Show Hub</string>
<string name="show_map">Show Map</string>
<string name="show_log">Show Log</string>
<string name="export_log">Export Log</string>
<string name="export_empty">Nothing to export</string>
<string name="clear_log">Clear Log</string>
<string name="quit">Quit</string>
<string name="preferences">Preferences</string>
<string name="profile_load">Load profile...</string>
<string name="profile_export">Export profile...</string>
<string name="p__ham">Amateur Radio</string>
<string name="p_callsign">Callsign</string>
<string name="p_callsign_nossid">Callsign (without SSID)</string>
<string name="p_callsign_summary">Your HAM radio callsign</string>
<string name="p_callsign_entry">Enter your callsign</string>
<string name="p_passcode">APRS-IS Passcode</string>
<string name="p_passcode_summary">APRS-IS validation passcode</string>
<string name="p_passcode_entry">Enter the passcode for your call</string>
<string name="p_passreq">Request Passcode</string>
<string name="p_passreq_summary">Request APRS-IS passcode online</string>
<string name="p__aprs">APRS Settings</string>
<string name="p_ssid">SSID</string>
<string name="p_ssid_summary">Station type (1..15; 9=Mobile, 10=APRS-IS)</string>
<string name="p_ssid_entry">Enter the SSID for your station</string>
<string-array name="p_ssid_e">
	<item>(none) Primary Station</item>
	<item>1: Generic additional station</item>
	<item>2: Generic additional station</item>
	<item>3: Generic additional station</item>
	<item>4: Generic additional station</item>
	<item>5: Other network (D-Star, 3G)</item>
	<item>6: Satellite</item>
	<item>7: Handheld radio</item>
	<item>8: Boat / ship</item>
	<item>9: Mobile station</item>
	<item>10: APRS-IS (no radio)</item>
	<item>11: Balloon, aircraft, spacecraft</item>
	<item>12: APRStt, DTMF, ... (one way)</item>
	<item>13: Weather station</item>
	<item>14: Freight vehicle</item>
	<item>15: Generic additional station</item>
</string-array>
<string name="p_symbol">APRS symbol</string>
<string name="p_symbol_summary">Your symbol for map display</string>
<string name="p_symbol_overlay">Overlay:</string>
<string name="p_symbol_result">Result:</string>
<string name="p_frequency">Voice frequency</string>
<string name="p_frequency_summary">Your voice frequency [MHz]</string>
<string name="p_status">Comment field</string>
<string name="p_status_summary">The text after your coordinates</string>
<string name="p_status_entry">Enter your beacon comment</string>
<string name="p__connection">APRS Connection</string>
<string name="p_conntype">Connection Protocol</string>
<string name="p_conntype_entry">Choose the connection protocol</string>
<string name="p_link">Connection Type</string>
<string name="p_link_entry">Choose the link type</string>
<string name="p_connsetup">Connection Preferences</string>
<string name="p_connlog">Connection Logging</string>
<string name="p_connlog_summary">Verbose status output in Log</string>
<string name="p_conn_aprsis">Internet (APRS-IS)</string>
<string name="p_conn_afsk">Audio (AFSK)</string>
<string name="p_conn_kiss">TNC (KISS)</string>
<string name="p_conn_tnc2">TNC (plaintext TNC2)</string>
<string name="p_conn_kwd">Kenwood (NMEA waypoint)</string>
<string name="p_conn_kwd_info">Kenwood setup help</string>
<string name="p_conn_kwd_gps">Use Android GPS</string>
<string name="p_conn_kwd_gps_summary">Forward NMEA sentences to radio</string>
<string name="p_conn_kwd_gps_debug">Display GPS in log</string>
<string name="p_conn_kwd_gps_debug_summary">Show raw NMEA in RGU</string>
<string name="p_aprsis_tcp">TCP connection</string>
<string name="p_aprsis_http">HTTP POST (send only)</string>
<string name="p_aprsis_udp">UDP (send only)</string>
<string name="p_link_bt">Bluetooth SPP</string>
<string name="p_link_tcpip">TCP/IP</string>
<string name="p_link_usb">USB Serial</string>
<string name="p_source_manual">Manual Position</string>
<string name="p_source_periodic">Periodic GPS/Network Position</string>
<string name="p_source_smart">SmartBeaconing™ Position</string>
<string name="p_source_lat">Latitude</string>
<string name="p_source_lon">Longitude</string>
<string name="p_source_coord">Coordinate</string>
<string name="p_source_from_map">Choose on map</string>
<string name="p_source_from_map_save">Save position</string>
<string name="p_source_get_last">Use last GPS position</string>
<string name="p_source_auto">Automatic Posting</string>
<string name="p_source_auto_summary">Perform periodic position posting</string>
<string name="p_privacy">Position privacy</string>
<string name="p_privacy_summary">Position ambiguity and more</string>
<string name="p_priv_ambiguity">Position Ambiguity</string>
<string name="p_priv_ambiguity_summary">Reduced precision for own position reports</string>
<string name="p_ambiguity_off">Off (DD° MM.mm\')</string>
<string name="p_ambiguity_ddmmm">1 (DD° MM.m\')</string>
<string name="p_ambiguity_ddmm">2 (DD° MM\')</string>
<string name="p_ambiguity_ddm">3 (DD° Mx\')</string>
<string name="p_ambiguity_dd">4 (DD°)</string>
<string name="p_priv_spdbear">Send Speed &amp; Bearing</string>
<string name="p_priv_spdbear_summary">Include speed and bearing in position reports</string>
<string name="p_priv_altitude">Send Altitude</string>
<string name="p_priv_altitude_summary">Include altitude in position reports</string>
<string name="p_host">Server</string>
<string name="p_host_summary">APRS-IS server (port 8080) to send beacons</string>
<string name="p_host_entry">Enter the APRS-IS server hostname</string>
<string name="p_host_hint">host:port</string>
<string name="p__position">Position Reports</string>
<string name="p_locsource">Location Source</string>
<string name="p_locsource_summary">Manual, Periodic or SmartBeaconing™</string>
<string name="p__location">Location Settings</string>
<string name="p_smartbeaconing">SmartBeaconing™</string>
<string name="p_sb_help">SmartBeaconing™ help</string>
<string name="p_sb_fast_speed">Fast Speed [km/h]</string>
<string name="p_sb_fast_speed_summary">Minimum speed for fast position updates</string>
<string name="p_sb_fast_rate">Fast Rate [s]</string>
<string name="p_sb_fast_rate_summary">Beacon rate at fast speed</string>
<string name="p_sb_slow_speed">Slow Speed [km/h]</string>
<string name="translator_credits">translator-credits</string>
</resources>