<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent" >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/background_card"
		android:padding="16dp" >
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="20sp"
			android:textColor="@color/text_primary"
			android:text="@string/build_version"
			android:layout_marginBottom="7sp"
			/>
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:autoLink="web"
			android:textColor="@color/text_secondary"
			android:textColorLink="@color/primary"
			android:text="@string/ad_copyright"
			android:layout_marginBottom="7sp" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:autoLink="web"
			android:textColor="@color/text_secondary"
			android:textColorLink="@color/primary"
			android:text="@string/ad_gpl"
			android:layout_marginBottom="10sp" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textColor="@color/text_primary"
			android:text="@string/ad_thanks" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textColor="@color/text_secondary"
			android:text="@string/ad_thanks_0" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textColor="@color/text_secondary"
			android:text="@string/ad_thanks_1" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textColor="@color/text_secondary"
			android:text="@string/ad_thanks_2" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textColor="@color/text_secondary"
			android:text="@string/ad_thanks_3" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textColor="@color/text_secondary"
			android:text="@string/ad_thanks_4" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:autoLink="web"
			android:textColor="@color/text_secondary"
			android:textColorLink="@color/primary"
			android:text="@string/ad_thanks_5" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:autoLink="web"
			android:textColor="@color/text_secondary"
			android:textColorLink="@color/primary"
			android:text="@string/ad_thanks_6" />
		<TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textColor="@color/text_primary"
			android:text="@string/ad_trans" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:autoLink="web"
			android:textColor="@color/text_secondary"
			android:textColorLink="@color/primary"
			android:text="@string/translator_credits"
			/>
	</LinearLayout>
</ScrollView>
