<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/menu_options">
	<item android:id="@+id/startstopbtn"
		android:title="@string/startlog"
		android:alphabeticShortcut="t"
		android:icon="@drawable/ic_menu_compass" />
	<item android:id="@+id/singlebtn"
		android:title="@string/singlelog"
		android:alphabeticShortcut="s"
		android:icon="@drawable/ic_menu_myplaces" />
	<item android:id="@+id/export"
		android:title="@string/export_log"
		android:alphabeticShortcut="x"
		android:icon="@drawable/ic_menu_save" />
	<item android:id="@+id/clear"
		android:title="@string/clear_log"
		android:alphabeticShortcut="c"
		android:icon="@drawable/ic_menu_delete" />
	<item android:id="@+id/preferences"
		android:title="@string/preferences"
		android:alphabeticShortcut="p"
		android:icon="@drawable/ic_menu_preferences" />
	<!-- About menu item temporarily hidden - can be re-enabled by uncommenting below block -->
	<!--
	<item android:id="@+id/about"
		android:title="@string/about"
		android:alphabeticShortcut="a"
		android:icon="@drawable/ic_menu_info_details" />
	-->
</group>
</menu>

